Added main system for ATM signs (will be released later)
Added multiple fee systems
  * Opening  - When you open an account           (player pays the fee)
  * Deposit  - When you deposit to an account     (player pays the fee)
  * Withdraw - When you withdraw from an account  (account pays the fee)
  * Transfer - When you transfer between accounts (sender account pays the fee)
  * Closing  - When you close an account          (player pays the fee)
  * Sign     - When you create a balance sign     (player pays the fee)
API: Removed 0.5 deprecated functions
API: Renamed CommandList to AccountCommands
API: Added BankCommands
API: Added Account
API: Moved a lot of account related functions to Account
API: Added Bank
API: and a lot more

0.5.1
Added permissionnode for list command (Included in basic permission)
Added possibility to disable interest and loan debug output
Accounts no longer case-sensitive
Code clean-up
Changed to use Register [GitHub Commit: 2071011cca5d89940f310dc39273be8bb7e517bc]
* Now supports following economy plugins (iConomy preferred)
  * iConomy 4
  * iConomy 5
  * BOSEconomy
  * Essentials Economy
Updated to CraftBukkit #860
Removed response to multiple banks config
API changes

CREDIT: Thanks to TrainYourBrain for helping out in my silent time
        http://forums.bukkit.org/members/trainyourbrain.69207/

0.5
Fixed basic permissionnode
Fixed not showing all commands in help
Fixed lookup for access when using SuperAdmin
Added command to list accounts
Added setting for let players deposit to all accounts
Added API informations
Added NPClib for future NPC support
Added account access
- Owners: All access
- Users: Deposit, balance and info only
Do no longer look for unused plugins
Now subtract money from iConomy when manual payment is used
Cleanup in config to make it (hopefully) more simple
- SQL-tables grouped
- Permissions grouped
- Global replaced by Areas
Updated to CraftBukkit #740 (Hopefully)

0.4
Added loan
	- Automatic payment