@@ -1,0 +1,7 @@
+package dk.earthgame.TAT.BankAccount.Enum;
+
+public enum ATMTypes {
+	DEPOSIT,
+	WITHDRAW,
+	TRANSFER
+}
