@@ -64,15 +64,19 @@ Areas:
 ##
 #Interest settings
 #   Time: Minutes between updates
-#   Amount: % of account balance added to every account
 #   Online-limit: % of users and owners that needs to be online to gain online interest
-#   Offline-amount: % of account balance added to every account when player is offline
+#   MultipleInterests: [Require MultipleBanks enabled]  true = each bank have their own interest rate // false = global interest rate
+#   SingleInterest: Settings when MultipleInterests is disabled
+#       Amount: % of account balance added to every account
+#       Offline-amount: % of account balance added to every account when player is offline
 ##
 Interest:
     Time: 5
-    Amount: 1
     Online-limit: 1
-    Offline-amount: 0.5
+    MultipleInterests: false
+    SingleInterest:
+        Amount: 1
+        Offline-amount: 0.5
 
 ##
 #Loan settings
@@ -120,9 +124,11 @@ Loan:
 #       Mode: Percentage/Static/Smart1/Smart2/None (Smart1: First percentage then static / Smart2: First static then percentage)
 #       Percentage: % of money
 #       Static: static amount of money
-#   Sign: Fee on creating sign
-#       Mode: Percentage/Static/Smart1/Smart2/None (Smart1: First percentage then static / Smart2: First static then percentage)
+#   Closing: Fee on remaining money
+#       Mode: Percentage/None
 #       Percentage: % of money
+#   Sign: Fee on creating sign
+#       Mode: Static/None
 #       Static: static amount of money
 ##
 Fee:
@@ -145,10 +151,8 @@ Fee:
     Closing:
         Mode: None
         Percentage: 0
-        Static: 0
     Sign:
         Mode: None
-        Percentage: 0
         Static: 0
 
 ##
